--- a/.github/workflows/firstworkflow.yaml
+++ b/.github/workflows/firstworkflow.yaml
@@ -12,7 +12,7 @@ jobs:
         node -v
         npm -v
   parralel-job-macos:
-    runs-on: macos
+    runs-on: macos-latest
     steps: 
       - name: View SW Version
         run: sw_vers
