--- a/.github/workflows/firstworkflow.yaml
+++ b/.github/workflows/firstworkflow.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: View SW Version
         run: sw_vers
   dependent-job:
-    runs-on: ubuntu
+    runs-on: ubuntu-20.04
     needs: [parralel-job-macos, run-shell-commands]
     steps:
       - name: something
