--- a/.github/workflows/working-dir-and-shells.yaml
+++ b/.github/workflows/working-dir-and-shells.yaml
@@ -1,5 +1,9 @@
 name: working dir and shells
 on: [push]
+defaults:
+  run:
+    shell: bash
+    working-directory: /
 jobs:
   display-wd-info:
     runs-on: ubuntu-latest
@@ -11,13 +15,24 @@ jobs:
           echo $GITHUB_SHA
           echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKSPACE
+      - name: change working dir
+        working-directory: /home/runner
+        run: pwd
   display-wd-windows:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: pwsh
     steps: 
       - name: Display work dir and list files
         run: |
-          pwd
-          ls -al
-          echo $GITHUB_SHA
-          echo $GITHUB_REPOSITORY
-          echo $GITHUB_WORKSPACE
+          Get-Location
+          dir
+          echo $env:GITHUB_SHA
+          echo $env:GITHUB_REPOSITORY
+          echo $env:GITHUB_WORKSPACE
+      - name: Python shell
+        shell: python
+        run: |
+          import paltform
+          print(baro)
