git checkout and fetch

--- a/.github/workflows/working-dir-and-shells.yaml
+++ b/.github/workflows/working-dir-and-shells.yaml
@@ -34,5 +34,5 @@ jobs:
       - name: Python shell
         shell: python
         run: |
-          import paltform
+          import platform
           print(baro)
