--- a/.github/workflows/checkout-repo-to-branch.yaml
+++ b/.github/workflows/checkout-repo-to-branch.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: checkout
         run: |
           git init
-          git remote add origin "https://$GITHUB_ACTOR:{{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git fetch origin
           git checkout main
       - name: List files after
