--- a/.github/workflows/checkout-repo-to-branch.yaml
+++ b/.github/workflows/checkout-repo-to-branch.yaml
@@ -2,6 +2,11 @@ name: Checkout
 on: [push]
 
 jobs:
+  checkout-action:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: /action/checkoit@v3
+      
   checkout-and-display-files:
     runs-on: ubuntu-latest
     steps:
