--- a/.github/workflows/statuschecks.yaml
+++ b/.github/workflows/statuschecks.yaml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: Step 1
         run: sleep 20
+      - name: Fail
+        run: exit 1
       - name: Runs on failure
         if: failure()
         run: echo 'Run only on failure'
