--- a/.github/workflows/envs-vs-contexts.yaml
+++ b/.github/workflows/envs-vs-contexts.yaml
@@ -37,7 +37,7 @@ jobs:
         steps:
             - name: Set Env Var
               run: |
-                DELIMITER=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+                DELIMITER=1233333
                 echo "RANDOM_JOKE<<$DELIMITER" >> "$GITHUB_ENV"
                 echo "Here is a joke: " >> "$GITHUB_ENV"
                 curl -s https://icanhazdadjoke.com/ >> "$GITHUB_ENV"
