--- a/.github/workflows/envs-vs-contexts.yaml
+++ b/.github/workflows/envs-vs-contexts.yaml
@@ -39,6 +39,7 @@ jobs:
               run: |
                 DELIMITER=123123
                 echo "RANDOM_JOKE<<$DELIMITER" >> "$GITHUB_ENV"
+                echo "Here is a joke: " >> "$GITHUB_ENV"
                 curl -s https://icanhazdadjoke.com/ >> "GITHUB_ENV"
                 echo "" >> "$GITHUB_ENV"
                 echo "$DELIMITER" >> "$GITHUB_ENV"
